--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -4,15 +4,37 @@ spring.application.name=Brainweb Interview
 server.compression.enabled=true
 server.http2.enabled=true
 server.compression.mime-types=application/json
-spring.jackson.serialization.write_dates_as_timestamps=true
-spring.jackson.mapper.propagate_transient_marker=true
-spring.jackson.property-naming-strategy=SNAKE_CASE
-spring.jackson.default-property-inclusion=non_null
+#spring.jackson.serialization.write_dates_as_timestamps=true
+#spring.jackson.mapper.propagate_transient_marker=true
+#spring.jackson.property-naming-strategy=SNAKE_CASE
+#spring.jackson.default-property-inclusion=non_null
+
+spring.datasource.hikari.connection-timeout = 20000 
+#maximum number of milliseconds that a client will wait for a connection
+spring.datasource.hikari.minimum-idle= 10 
+#minimum number of idle connections maintained by HikariCP in a connection pool
+spring.datasource.hikari.maximum-pool-size= 10 
+#maximum pool size
+spring.datasource.hikari.idle-timeout=10000 
+#maximum idle time for connection
+spring.datasource.hikari.max-lifetime= 1000 
+# maximum lifetime in milliseconds of a connection in the pool after it is closed.
+spring.datasource.hikari.auto-commit =true 
+#default auto-commit behavior.
 
 ## JDBC
-spring.flyway.enabled=true
-spring.flyway.schemas=interview_service
-jdbc.url=jdbc:postgresql://localhost:5432/postgres
-jdbc.username=brainweb
-jdbc.password=brainweb
-jdbc.schema=interview_service
+#spring.flyway.enabled=false
+#spring.flyway.schemas=interview_service
+#flyway.user=service_unit
+#flyway.password=service_unit
+#flyway.url=jdbc:oracle:thin:@//localhost:1521/XE
+#flyway.locations=classpath:db/migration/oracle/shared
+#flyway.placeholderReplacement=false
+#flyway.baselineOnMigrate=true
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/heros
+spring.datasource.username=brainweb
+spring.datasource.password=brainweb
+spring.datasource.schema=interview_service
