--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,12 +13,9 @@
 
 	<properties>
 		<maven.deploy.skip>true</maven.deploy.skip>
-		<!-- <flyway.enabled>false</flyway.enabled>
-		<flyway.url>jdbc:postgresql://localhost:5432/postgres</flyway.url>
-		<flyway.user>brainweb</flyway.user>
-		<flyway.password>brainweb</flyway.password>
-		<flyway.schemas>interview_service</flyway.schemas>
-		<flyway.locations>filesystem:resources/db/migration</flyway.locations> -->
+		<!-- <flyway.enabled>false</flyway.enabled> <flyway.url>jdbc:postgresql://localhost:5432/postgres</flyway.url> 
+			<flyway.user>brainweb</flyway.user> <flyway.password>brainweb</flyway.password> 
+			<flyway.schemas>interview_service</flyway.schemas> <flyway.locations>filesystem:resources/db/migration</flyway.locations> -->
 
 	</properties>
 
@@ -37,10 +34,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
-		</dependency> -->
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -50,16 +47,14 @@
 		<dependency>
 			<groupId>brainweb</groupId>
 			<artifactId>interview-model</artifactId>
-			
+
 		</dependency>
 		<dependency>
 			<groupId>com.lmax</groupId>
 			<artifactId>disruptor</artifactId>
 		</dependency>
-		<!--<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>-->
+		<!--<dependency> <groupId>org.flywaydb</groupId> <artifactId>flyway-core</artifactId> 
+			</dependency> -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -71,6 +66,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.19</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -78,15 +81,15 @@
 		<!-- <resources> <resource> <directory>resources</directory> <targetPath>${project.build.outputDirectory}</targetPath> 
 			<includes> <include>resources/application.properties</include> </includes> 
 			</resource> </resources> -->
-			 <resources>
-            <resource>
-                <directory>resources</directory>
-                <targetPath>${project.build.outputDirectory}</targetPath>
-                <includes>
-                    <include>application.properties</include>
-                </includes>
-            </resource>
-        </resources>
+		<resources>
+			<resource>
+				<directory>resources</directory>
+				<targetPath>${project.build.outputDirectory}</targetPath>
+				<includes>
+					<include>application.properties</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -102,96 +105,28 @@
 				<version>2.22.2</version>
 			</plugin>
 
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<forkCount>1</forkCount>
-					<reuseForks>true</reuseForks>
-					<systemPropertyVariables>
-						suppress UnresolvedMavenProperty
-						<it-database.port>${brainweb-interview-postgres-it.port}</it-database.port>
-					</systemPropertyVariables>
-				</configuration>
-			</plugin> -->
-			<!-- <plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.31.0</version>
-				<configuration>
-					<images>
-						<image>
-							<name>brainweb/interview-postgres-it</name>
-							<alias>interview-postgres-it</alias>
-							<build>
-								<dockerFileDir>${project.basedir}/src/main/resources/db/schema</dockerFileDir>
-								<filter>@</filter>
-							</build>
-							<run>
-								<ports>
-									<port>brainweb-interview-postgres-it.port:5432</port>
-								</ports>
-							</run>
-						</image>
-					</images>
-
-				</configuration>
-				<executions>
-					<execution>
-						<id>start</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>build</goal>
-							<goal>start</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>stop</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
-			<!-- <plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>3.5.31</version>
-				<configuration>
-					<mode>kubernetes</mode>
-					<images>
-						<image>
-							<name>brainweb/interview</name>
-							<alias>interview-api</alias>
-							<build>
-								<dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
-								<assembly>
-									<descriptorRef>artifact</descriptorRef>
-								</assembly>
-							</build>
-						</image>
-					</images>
-				</configuration>
-				<executions>
-					<execution>
-						<id>fabric8</id>
-						<goals>
-							<goal>resource</goal>
-							<goal>build</goal>
-							<goal>helm</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> 
+				<executions> <execution> <goals> <goal>integration-test</goal> <goal>verify</goal> 
+				</goals> </execution> </executions> <configuration> <forkCount>1</forkCount> 
+				<reuseForks>true</reuseForks> <systemPropertyVariables> suppress UnresolvedMavenProperty 
+				<it-database.port>${brainweb-interview-postgres-it.port}</it-database.port> 
+				</systemPropertyVariables> </configuration> </plugin> -->
+			<!-- <plugin> <groupId>io.fabric8</groupId> <artifactId>docker-maven-plugin</artifactId> 
+				<version>0.31.0</version> <configuration> <images> <image> <name>brainweb/interview-postgres-it</name> 
+				<alias>interview-postgres-it</alias> <build> <dockerFileDir>${project.basedir}/src/main/resources/db/schema</dockerFileDir> 
+				<filter>@</filter> </build> <run> <ports> <port>brainweb-interview-postgres-it.port:5432</port> 
+				</ports> </run> </image> </images> </configuration> <executions> <execution> 
+				<id>start</id> <phase>pre-integration-test</phase> <goals> <goal>build</goal> 
+				<goal>start</goal> </goals> </execution> <execution> <id>stop</id> <phase>post-integration-test</phase> 
+				<goals> <goal>stop</goal> </goals> </execution> </executions> </plugin> -->
+			<!-- <plugin> <groupId>io.fabric8</groupId> <artifactId>fabric8-maven-plugin</artifactId> 
+				<version>3.5.31</version> <configuration> <mode>kubernetes</mode> <images> 
+				<image> <name>brainweb/interview</name> <alias>interview-api</alias> <build> 
+				<dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir> <assembly> 
+				<descriptorRef>artifact</descriptorRef> </assembly> </build> </image> </images> 
+				</configuration> <executions> <execution> <id>fabric8</id> <goals> <goal>resource</goal> 
+				<goal>build</goal> <goal>helm</goal> </goals> </execution> </executions> 
+				</plugin> -->
 		</plugins>
 	</build>
 
